index.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    color: #282828;
}

header {
    background-color: #282828;
    color: #f5f5f5;
}

.logo {
    font-size: 18px;
    font-weight: 700;
}

ul {
    display: flex;
    list-style-type: none;
    align-items: center;
    margin: 0;
    padding: 25px;
    gap: 10px;
}

li {
    cursor: pointer;
}

.icon {
    width: 25px;
}

.align-right {
    margin-left: auto;
}

h1 {
    font-size: 40px;
    font-weight: 400;
    margin: 30px 25px;
}

.item {
    position: relative;
}

.item-img {
    display: block;
    width: 100%;
}

.caption {
    margin: 0 25px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
}

.img-banner {
    background-color: #cd6858;
    color: #f5f5f5;
    padding: 10px;
    position: absolute;
    top: 0px;
    left: 0px;
}

button {
    border: none;
    background-color: #cd6858;
    color: #f5f5f5;
    padding: 10px 15px;
    cursor: pointer;
}

